--- a/WeatherApplication/app/build.gradle
+++ b/WeatherApplication/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.weatherapplication"
+        applicationId 'com.crnkic.weatherapp'
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -40,9 +40,14 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+
+    //Converting JSON
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
