--- a/9.6_WeatherApplication/app/build.gradle
+++ b/9.6_WeatherApplication/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    ///Retrofit   implementation 'com.google.code.gson:gson:2.8.6'
+    ///Retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     //Json
