--- a/MyWeatherApp/app/build.gradle
+++ b/MyWeatherApp/app/build.gradle
@@ -34,19 +34,30 @@ android {
 }
 
 dependencies {
-    implementation "androidx.fragment:fragment:1.2.5"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation 'com.google.code.gson:gson:2.8.6'
+    //Retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
-    implementation 'androidx.core:core-ktx:1.3.2'
+    //Gson - parsing JSON objects
+    implementation 'com.google.code.gson:gson:2.8.6'
 
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.3"
+
+    // Fragment and Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
+    implementation 'androidx.preference:preference-ktx:1.1.1'
+
+    //Testing
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
 }
