--- a/MyWeatherApp/app/build.gradle
+++ b/MyWeatherApp/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
@@ -35,6 +36,9 @@ android {
 }
 
 dependencies {
+
+    def room_version = "2.2.6"
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -47,6 +51,13 @@ dependencies {
 
     //Gson - parsing JSON objects
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Feature module Support
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.3"
