--- a/9.6_WeatherApplication/app/src/main/AndroidManifest.xml
+++ b/9.6_WeatherApplication/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.96_WeatherApplication"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name="com.kryvovyaz.a96_weatherapplication.screen.MainActivity">
+        <activity android:name="com.kryvovyaz.a96_weatherapplication.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
