--- a/9.6_WeatherApplication/app/build.gradle
+++ b/9.6_WeatherApplication/app/build.gradle
@@ -37,22 +37,17 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.21"
     //Fragment
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
-
     //Picture
     implementation 'com.squareup.picasso:picasso:2.8'
-
     //Retrofit and JSON
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
     //Live Data
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
-
     //ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -65,7 +60,9 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.6'
     kapt 'androidx.room:room-compiler:2.2.6'
     kapt 'androidx.room:room-ktx:2.2.6'
-
+    //
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+    //
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
