--- a/WeatherApplication/app/src/main/AndroidManifest.xml
+++ b/WeatherApplication/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
+        android:name=".WeatherApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
