--- a/9.6_WeatherApplication/app/build.gradle
+++ b/9.6_WeatherApplication/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
     id "org.jetbrains.kotlin.kapt"
 }
@@ -9,7 +9,9 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
-
+    buildFeatures {
+        viewBinding true
+    }
     defaultConfig {
         applicationId 'com.kryvovyaz.a96_weatherapplication'
         minSdkVersion 21
@@ -34,42 +36,50 @@ android {
         jvmTarget = '1.8'
     }
 }
-
 dependencies {
+    implementation "com.google.android.gms:play-services-location:18.0.0"
+    def room_version = "2.2.6"
+    def activity_version = "1.2.1"
+    def fragment_version = "1.3.1"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.21"
-    //Fragment
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
-    //Picture
-    implementation 'com.squareup.picasso:picasso:2.8'
-    //Retrofit and JSON
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    //Live Data
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
-    //ViewModel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-
-    //Fragment and Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
-
-    //Room-database
-    implementation 'androidx.room:room-runtime:2.2.6'
-    kapt 'androidx.room:room-compiler:2.2.6'
-    kapt 'androidx.room:room-ktx:2.2.6'
-    //
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
-    //
-    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.preference:preference-ktx:1.1.1'
-    testImplementation 'junit:junit:4.+'
+
+
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    // Coroutines
+    def coroutines = "1.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //Gson - parsing JSON objects
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // Fragment and Navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+
+    //Testing
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
