--- a/WeatherForecast/app/build.gradle
+++ b/WeatherForecast/app/build.gradle
@@ -41,14 +41,15 @@ android {
 }
 
 dependencies {
+
     def room_version = "2.2.6"
     def activity_version = "1.2.1"
-    def fragment_version = "1.3.1"
+    def fragment_version = "1.3.2"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.31"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'                                 // Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'               // Testing
@@ -66,11 +67,13 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'  // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'     // Coroutines
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'    // Swipe refresh
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'    // liveData
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'    // liveData
     implementation "androidx.activity:activity-ktx:$activity_version"   // extension pack
     implementation "androidx.fragment:fragment-ktx:$fragment_version"   // extension pack
     // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation platform('com.google.firebase:firebase-bom:26.8.0')  // BoM Firebase platform
     implementation 'com.google.firebase:firebase-crashlytics-ktx'       // Crashlytics libraries
     implementation 'com.google.firebase:firebase-analytics-ktx'         // Analytics libraries
-    implementation platform('com.google.firebase:firebase-bom:26.7.0')  // BoM Firebase platform
+    implementation 'com.google.firebase:firebase-messaging'             // Firebase Cloud Messaging
+    implementation 'androidx.work:work-runtime:2.5.0'                   // Work Manager
 }
