--- a/WeatherApplication/app/build.gradle
+++ b/WeatherApplication/app/build.gradle
@@ -5,6 +5,9 @@ plugins {
 //    id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
     id "org.jetbrains.kotlin.kapt"
+
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -81,9 +84,22 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
 
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
+
+    // Declare the dependencies for the Crashlytics and Analytics libraries
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    //Firebase cloud messaging
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+
     //Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //mock
+    testImplementation 'io.mockk:mockk:1.10.6'
 }
 
